--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,10 +24,10 @@
   {% endif %}
 
   {% include language.html %}
-  {% include interests.html %}
+  <!-- {% include interests.html %} -->
 
-  {% if sidebar.about %}
+  <!-- {% if sidebar.about %}
     {% include about.html %}
-  {% endif %}
+  {% endif %} -->
 
 </div><!--//sidebar-wrapper-->
